# meowBot

./: .flake8  .gitignore  .replit  Dockerfile  Intro.py  Justfile  MeowBot.py  README.md  bot.py  config.json  general.py  intro.py  jokes.txt  log.txt  misc.py  music.py  pyproject.toml  quotes.txt  requirements.txt  token.txt
.github/workflows/: deploy.yml  main-deploy.yml  pr-checks.yml
Cogs/: commands.py  creation.py  errors.py  events.py  general.py  intro.py  misc.py  music.py
Files/: log.txt  quotes.txt
cogs/: creation.py  errors.py  events.py  general.py  misc.py  music.py
files/: quotes.txt
meowbot/: bot.py
meowbot/application/: __init__.py
meowbot/application/models/: __init__.py  audio_options.py  http_client.py  music_queue.py  ytdl_source.py
meowbot/application/services/: command_handler_service.py  event_handler_service.py  helper_service.py  interactions_service.py  voice_service.py
meowbot/bot/: meowbot.py
meowbot/bot/cogs/: __init__.py  channels.py  command_handler.py  creation.py  errors.py  event_handler.py  events.py  general.py  helper.py  interactions.py  misc.py  music.py  voice.py
meowbot/cogs/: misc.py  music.py
meowbot/utils/: __init__.py  logger.py
tests/unit/application/models/: test_http_client.py  test_music_queue.py
tests/unit/application/services/: test_event_handler_service.py  test_helper_service.py  test_interactions_service.py  test_voice_service.py
tests/unit/bot/: test_meowbot.py
