[tool.poetry]
name = "meowbot"
version = "0.1.0"
description = "A discord bot for personal music playing"
authors = ["Jaime Garcia, Jr. <40704782+JJgar2725@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
python-dotenv = "*"
discord-py = { version = ">=2.4.0,<3.0.0", extras = ["voice"] }
pynacl = "*"
dnspython = "^2.7.0"
async-timeout = "*"
yt-dlp = { version = ">=2025.1.15,<2026.0.0" }
aiohttp = { version = ">=3.11.11,<4.0.0" }

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
